feat: generate invoke tools related client
